deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: restate-go
spec:
  strategy:
    type: Recreate
  template:
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: quay.io/kennedn/restate-go:latest
        imagePullPolicy: Always
        name: restate-go
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: restate-go-config-volume
          mountPath: /app/config.yaml
          subPath: config.yaml
        - name: restate-go-cache-volume
          mountPath: /tmp/cache
        - name: restate-go-state-volume
          mountPath: /tmp/state
      volumes:
      - name: restate-go-config-volume
        secret:
          defaultMode: 420
          secretName: restate-go-config
      - name: restate-go-cache-volume
        persistentVolumeClaim:
          claimName: restate-go-cache
      - name: restate-go-state-volume
        persistentVolumeClaim:
          claimName: restate-go-state
