ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restate-go
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: restate-go-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/server-snippet: |
      satisfy any;
      allow 192.168.1.0/24;
      deny all;
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://stateful.kennedn.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET,POST,PUT,DELETE,PATCH,OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.kennedn.com
    secretName: restate-go
  ingressClassName: public
  rules:
  - host: api.kennedn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restate-go
            port:
              number: 80
